/MT build and import from unicode path
 - .pyc file written to correct place.
 - Loading packages working
 - MT build issues fixed for BZ2 module

BZ2 module opens the file with the Python File() constructor, but writes to the
FILE* directly with fwrite().  When built with /MT, the fopen() and fwrite() are
then called from separate copies of the C Runtime, hence the FILE* is no longer
valid.  This commit introduces the fix, which opens the file directly in the BZ2
module, and then creates a PyFileObject from the FILE*.

Minor fix to pydoc, so unicode paths won't crash the help() call.

Simply skips displaying the module contents if it errors.
This really needs a better fix.

--- a/PCbuild/_bsddb.vcproj
+++ b/PCbuild/_bsddb.vcproj
@@ -44,6 +44,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(bsddbDir),$(bsddbDir)\.."
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
+				RuntimeLibrary="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -171,6 +172,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(bsddbDir),$(bsddbDir)\.."
 				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
+				RuntimeLibrary="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
