--- a/PCbuild/_multiprocessing.vcproj
+++ b/PCbuild/_multiprocessing.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="_multiprocessing"
 	ProjectGUID="{9E48B300-37D1-11DD-8C41-005056C00008}"
 	RootNamespace="_multiprocessing"
@@ -42,6 +42,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				RuntimeLibrary="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -164,6 +165,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				RuntimeLibrary="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -519,11 +521,11 @@
 			Name="Header Files"
 			>
 			<File
-				RelativePath="..\Modules\_multiprocessing\multiprocessing.h"
+				RelativePath="..\Modules\_multiprocessing\connection.h"
 				>
 			</File>
 			<File
-				RelativePath="..\Modules\_multiprocessing\connection.h"
+				RelativePath="..\Modules\_multiprocessing\multiprocessing.h"
 				>
 			</File>
 		</Filter>
