--- a/PCbuild/_tkinter.vcproj
+++ b/PCbuild/_tkinter.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="_tkinter"
 	ProjectGUID="{4946ECAC-2E69-4BF8-A90A-F5136F5094DF}"
 	RootNamespace="_tkinter"
@@ -42,8 +42,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="$(tcltkDir)\include"
-				PreprocessorDefinitions="WITH_APPINIT"
+				AdditionalIncludeDirectories="&quot;$(tclDir)\generic&quot;;&quot;$(tkDir)\generic&quot;;&quot;$(tkDir)\xlib&quot;"
+				PreprocessorDefinitions="WITH_APPINIT;STATIC_BUILD"
+				RuntimeLibrary="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -166,8 +167,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="$(tcltkDir)\include"
-				PreprocessorDefinitions="WITH_APPINIT"
+				AdditionalIncludeDirectories="$(tclDir)\generic;$(tkDir)\generic;$(tkDir)\xlib"
+				PreprocessorDefinitions="WITH_APPINIT;STATIC_BUILD"
+				RuntimeLibrary="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
